--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/method-override": "^0.0.32",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
@@ -25,17 +26,19 @@
     "http": "^0.0.1-security",
     "http-errors": "^2.0.0",
     "memorystore": "^1.6.7",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "response-time": "^2.3.2",
     "sequelize": "^6.31.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/http-errors": "^2.0.1"
